INTYGFV-15630: Added filtering possibility for REKO status